# Django-Poll-App

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  workflow.yml
.github/workflows/: tests.yml
