[tool.poetry]
name = "django-poll-app"
version = "0.1.0"
description = ""
authors = ["Mahmudul Alam",
            "Mathieu Dupuy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
